# selectools

./: .claudeignore  .flake8  .gitignore  .impeccable.md  .pre-commit-config.yaml  .release-scripts-summary.md  .v0.6.1-summary.md  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  FEATURE_PROPOSALS.md  HANDOFF.md  IMPLEMENTATION.md  LICENSE  MULTI_AGENT_PLAN.md  README.md  RELEASE.md  ROADMAP.md  SECURITY.md  agent.py  docker-compose.yml  list_gemini_models.py  mkdocs.yml  pyproject.toml  pyrightconfig.json  rag_demo_knowledge.db  sbom.json
.claude/: settings.json
.claude/skills/: selectools-docs.md  selectools-feature.md  selectools-provider.md  selectools-release.md  selectools-test.md
.cursor/rules/: selectools-agent-core.mdc  selectools-development.mdc  selectools-docs.mdc  selectools-providers.mdc  selectools-testing.mdc
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: good-first-issue.md
.github/workflows/: ci.yml  docs.yml
docs/: ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CNAME  COMPATIBILITY.md  CONTEXT_ENGINEERING.md  CONTRIBUTING.md  COOKBOOK.md  DEPRECATION_POLICY.md  KEYS.md  LANGCHAIN_COMPARISON.md  MIGRATION.md  MIGRATION_1.0.md  QUICKSTART.md  README.md  RELEASE_GUIDE.md  ROADMAP.md  SECURITY.md  SECURITY_AUDIT.md  USER_GUIDE.md  design-system.md  index.md  llms-full.txt  llms.txt  robots.txt
docs/assets/: og-card.html
docs/decisions/: 001-protocol-over-abc.md  002-observer-replaces-hooks.md  003-literal-to-enum.md  004-provider-base-class.md  005-agent-decomposition.md  006-agent-config-future.md
docs/javascripts/: copy-markdown.js  fix-logo-link.js
docs/modules/: A2A.md  ADVANCED_CHUNKING.md  AGENT.md  AUDIT.md  AZURE_OPENAI.md  BENCHMARKS.md  BUDGET.md  CANCELLATION.md  CONVERSATION_BRANCHING.md  DYNAMIC_TOOLS.md  EMBEDDINGS.md  ENTITY_MEMORY.md  EVALS.md  EXCEPTIONS.md  FAISS.md  GUARDRAILS.md  HYBRID_SEARCH.md  KNOWLEDGE.md  KNOWLEDGE_GRAPH.md  LANGFUSE.md  LOOP_DETECTION.md  MCP.md  MEMORY.md  MODELS.md  MODEL_SWITCHING.md  MULTIMODAL.md  ORCHESTRATION.md  OTEL.md  PARSER.md  PATTERNS.md  PGVECTOR.md  PIPELINE.md  PROMPT.md  PROMPT_COMPRESSION.md  PROVIDERS.md  QDRANT.md  RAG.md  REASONING_STRATEGIES.md  REASONING_TOOLS.md  SCHEDULER.md  (+17 more)
docs/specs/: 2026-04-13-agent-as-api.md  2026-04-13-agentic-memory.md  2026-04-13-loop-detection.md
docs/stylesheets/: extra.css
examples/: 01_hello_world.py  02_search_weather.py  03_toolbox.py  04_conversation_memory.py  05_cost_tracking.py  06_async_agent.py  07_streaming_tools.py  08_streaming_parallel.py  09_caching.py  100_deferred_confirmation.py  101_litellm_provider.py  102_router_provider.py  103_a2a_protocol.py  104_toolbox_expansion.py  105_session_search.py  106_unified_memory.py  107_tool_result_compression.py  108_agent_hitl.py  109_planning_as_config.py  10_routing_mode.py  110_quick_reply_buttons.py  111_knowledge_sanitizers.py  112_toolbox_v1_1_expansion.py  112_unified_memory_config.py  113_scheduled_agents.py  114_reasoning_tools.py  11_tool_analytics.py  12_observability_hooks.py  13_dynamic_tools.py  14_rag_basic.py  15_semantic_search.py  16_rag_advanced.py  17_rag_multi_provider.py  18_hybrid_search.py  19_advanced_chunking.py  20_customer_support_bot.py  21_data_analysis_agent.py  22_ollama_local.py  23_structured_output.py  24_traces_and_reasoning.py  (+97 more)
landing/: eval-report-preview.html  examples.json  index.html  simulation-traces.json  trace-preview.html
landing/examples/: index.html
landing/simulations/: index.html
notebooks/: getting_started.ipynb
scripts/: README.md  build_examples_gallery.py  build_favicons.py  build_llms_full.py  chat.py  eval_loop_detection_live.py  fetch_models.py  fetch_openai_models.py  ralph_bug_hunt.sh  release.py  release.sh  render_og_image.py  run_e2e_tests.py  smoke_cli.py  stability_audit.py  sync_marketing_version.py  test_memory_with_openai.py
src/selectools/: CLAUDE.md  __init__.py  _async_utils.py  _json_utils.py  _pii_patterns.py  _ssrf.py  _time.py  agent.py  analytics.py  audit.py  cache.py  cache_redis.py  cache_semantic.py  cancellation.py  checkpoint_postgres.py  cli.py  coherence.py  compose.py  entity_memory.py  env.py  exceptions.py  knowledge.py  knowledge_backends.py  knowledge_graph.py  knowledge_sanitizers.py  knowledge_store_redis.py  knowledge_store_supabase.py  loop_detection.py  memory.py  models.py  observer.py  parser.py  pending.py  pipeline.py  policy.py  pricing.py  prompt.py  results.py  scheduler.py  security.py  (+9 more)
src/tool_calling/: agent.py
src/toolcalling/: __init__.py  agent.py  cli.py  env.py  parser.py  prompt.py  tools.py
tests/: CLAUDE.md  TEST_RESULTS.md  conftest.py  reproduce_native_tools.py  test_a2a.py  test_agent_api.py  test_agent_hitl.py  test_analytics.py  test_approval_gate.py  test_architecture.py  test_async_observers.py  test_audit.py  test_bake_window_hunt.py  test_better_errors.py  test_budget.py  test_bug_hunt_batch1_core.py  test_bug_hunt_batch1_security.py  test_bug_hunt_batch1_tools.py  test_bug_hunt_regression.py  test_cache.py  test_cache_redis.py  test_cancellation.py  test_checkpoint_postgres.py  test_cli.py  test_coherence.py  test_concurrency_smoke.py  test_consolidation_regression.py  test_conversation_branching.py  test_cost_tracking.py  test_coverage_orchestration.py  test_document_loaders.py  test_document_loaders_extended.py  test_e2e_langfuse_observer.py  test_e2e_multimodal.py  test_e2e_ollama.py  test_e2e_otel_observer.py  test_e2e_providers.py  test_e2e_v0_21_0_apps.py  test_e2e_v0_21_0_simulations.py  test_edge_cases.py  (+116 more)
tests/agent/: test_agent.py  test_agent_cache.py  test_agent_e2e.py  test_agent_observer.py  test_agent_v013_e2e.py  test_analytics.py  test_astream_parity.py  test_batch.py  test_clone_for_isolation.py  test_guardrail_observability.py  test_hooks_removed.py  test_observability_hooks.py  test_parallel_tools.py  test_planning.py  test_regression.py  test_streaming.py  test_structured_followups.py  test_structured_output_modes.py  test_structured_streaming_contract.py  test_tool_args_guardrails.py  test_tool_result_guardrails.py
(+257 files in other folders)
