[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "selectools"
version = "0.23.0"
description = "Production-ready Python framework for AI agents with multi-agent graphs, hybrid RAG, guardrails, audit logging, 50 evaluators, and a visual builder. Supports OpenAI, Anthropic, Gemini, Ollama. By NichevLabs."
readme = "README.md"
requires-python = ">=3.9"
license = "Apache-2.0"
authors = [{name = "John Nichev", email = "johnnichev@gmail.com"}]
maintainers = [{name = "NichevLabs", email = "support@nichevlabs.com"}]
dependencies = [
    "openai>=1.30.0,<2.0.0",
    "anthropic>=0.28.0,<1.0.0",
    "google-genai>=1.0.0",
    "numpy>=1.24.0,<3.0.0",
]
keywords = [
    "llm", "ai", "agent", "agents", "multi-agent", "agent-framework",
    "tool-calling", "openai", "anthropic", "gemini", "ollama",
    "rag", "hybrid-search", "vector-search", "embeddings",
    "guardrails", "evals", "evaluators", "visual-builder",
    "structured-output", "observability", "fallback", "langchain-alternative",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.urls]
Homepage = "https://selectools.dev"
Documentation = "https://selectools.dev"
Repository = "https://github.com/johnnichev/selectools"
Issues = "https://github.com/johnnichev/selectools/issues"
Changelog = "https://github.com/johnnichev/selectools/blob/main/CHANGELOG.md"
Builder = "https://selectools.dev/builder/"
Examples = "https://selectools.dev/examples/"
"NichevLabs" = "https://nichevlabs.com"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-xdist>=3.5.0",
    "build>=1.2.1",
    "twine>=5.0.0",
    "pre-commit>=3.6.0",
    "ruff>=0.6.0",
    "mypy>=1.8.0",
    "bandit>=1.7.0",
    "hypothesis>=6.100.0",
    "mkdocs-material>=9.5.0",
]
rag = [
    "chromadb>=0.4.0",
    "pinecone-client>=3.0.0",
    "voyageai>=0.2.0",
    "cohere>=5.0.0",
    "pypdf>=4.0.0",
    "qdrant-client>=1.7.0",
    "faiss-cpu>=1.7.0",
    "beautifulsoup4>=4.12.0",
]
observe = [
    "opentelemetry-api>=1.20.0",
    "langfuse>=2.0.0",
]
evals = [
    "pyyaml>=6.0.0",
]
mcp = [
    "mcp>=1.0.0,<2.0.0",
]
postgres = [
    "psycopg2-binary>=2.9.0",
]
supabase = [
    "supabase>=2.0.0",
]
serve = [
    "pyyaml>=6.0.0",
    "starlette>=0.27.0",
    "uvicorn[standard]>=0.24.0",
]

[project.scripts]
selectools = "selectools.serve.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"selectools.serve" = ["_static/*.html", "_static/*.css", "_static/*.js"]

[tool.ruff]
line-length = 100
target-version = "py39"
extend-exclude = [
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".tox",
    ".venv",
    "build",
    "dist",
]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "B",    # flake8-bugbear
    "I",    # isort
]
ignore = [
    "E203",  # whitespace before ':' (conflicts with formatter)
    "E501",  # line too long (handled by formatter)
    "E402",  # module-level import not at top
    "E721",  # type comparison with == (allowed; legacy test pattern)
    "F401",  # unused imports (common in __init__.py re-exports)
    "F541",  # f-string without placeholder
    "F841",  # local variable assigned but never used
    "B011",  # do not call assert False
    "B023",  # function definition does not bind loop variable
    "B904",  # raise without `from` in except (TODO: fix pre-existing violations)
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B"]
"examples/*" = ["B", "F"]
"scripts/*" = ["B", "F"]

[tool.ruff.lint.isort]
known-first-party = ["selectools"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true
exclude = [
    "tests/",
    "examples/",
    "build/",
    "dist/",
]

[[tool.mypy.overrides]]
module = [
    "selectools.agent._tool_executor",
    "selectools.agent._provider_caller",
    "selectools.agent._lifecycle",
    "selectools.agent._memory_manager",
    "selectools.providers._openai_compat",
]
disable_error_code = ["attr-defined"]

[tool.bandit]
exclude_dirs = ["tests", "examples", "scripts"]
skips = ["B101", "B104", "B110", "B310", "B324", "B601", "B602"]  # Skip assert_used, bind_all_interfaces, try_except_pass, urlopen, weak_hash, shell, subprocess
targets = ["src/"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "."]
asyncio_mode = "strict"
addopts = "-v"
filterwarnings = [
    "ignore:urllib3 v2 only supports OpenSSL",
]
python_files = ["test_*.py", "sim_*.py"]
markers = [
    "e2e: mark test as end-to-end (requires real API keys, use --run-e2e to run)",
    "integration: mark test as integration (no API keys, uses real implementations with mocks)",
    "openai: mark test as requiring OpenAI API key",
    "anthropic: mark test as requiring Anthropic API key",
    "gemini: mark test as requiring Gemini API key",
    "ollama: mark test as requiring Ollama running locally",
]
